// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataImporter > renders with error with a message 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ant-row mb3 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-alert ant-alert-info ant-alert-no-icon css-dev-only-do-not-override-mncuj7"
          data-show="true"
          role="alert"
        >
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              Fill in the field to automatically import more data from arXiv or DOI
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row mb3 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-alert ant-alert-error css-dev-only-do-not-override-mncuj7"
          data-show="true"
          data-testid="data-importer-error"
          role="alert"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle ant-alert-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
              />
            </svg>
          </span>
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              error
            </div>
          </div>
          <button
            class="ant-alert-close-icon"
            tabindex="0"
            type="button"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-5 css-dev-only-do-not-override-mncuj7"
        >
          <label
            class=""
            title=""
          >
            <span
              aria-describedby="test-id"
            >
              From arXiv or DOI
            </span>
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                data-test-id="import-input"
                data-testid="import-input"
                placeholder="hep-th/9711200 or 1207.7235 or arXiv:1001.4538 or 10.1086/305772 or doi:10.1086/305772"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-space-between ant-row-middle css-dev-only-do-not-override-mncuj7"
      type="flex"
    >
      <div
        class="ant-col css-dev-only-do-not-override-mncuj7"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text __LinkLikeButton__ blue"
          data-test-id="skip-import-button"
          data-testid="skip-import-button"
          type="button"
        >
          <span>
            Skip and fill the form manually
          </span>
        </button>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-mncuj7"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
          data-test-id="import-button"
          data-testid="import-button"
          type="button"
        >
          <span>
            Import
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataImporter > renders with error with message and recid 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ant-row mb3 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-alert ant-alert-info ant-alert-no-icon css-dev-only-do-not-override-mncuj7"
          data-show="true"
          role="alert"
        >
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              Fill in the field to automatically import more data from arXiv or DOI
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row mb3 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-alert ant-alert-error css-dev-only-do-not-override-mncuj7"
          data-show="true"
          data-testid="data-importer-error"
          role="alert"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle ant-alert-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
              />
            </svg>
          </span>
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              error.  
              <a
                href="http://inspirehep.net/record/12345"
                target="_blank"
              >
                See the record
              </a>
            </div>
          </div>
          <button
            class="ant-alert-close-icon"
            tabindex="0"
            type="button"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-5 css-dev-only-do-not-override-mncuj7"
        >
          <label
            class=""
            title=""
          >
            <span
              aria-describedby="test-id"
            >
              From arXiv or DOI
            </span>
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                data-test-id="import-input"
                data-testid="import-input"
                placeholder="hep-th/9711200 or 1207.7235 or arXiv:1001.4538 or 10.1086/305772 or doi:10.1086/305772"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-space-between ant-row-middle css-dev-only-do-not-override-mncuj7"
      type="flex"
    >
      <div
        class="ant-col css-dev-only-do-not-override-mncuj7"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text __LinkLikeButton__ blue"
          data-test-id="skip-import-button"
          data-testid="skip-import-button"
          type="button"
        >
          <span>
            Skip and fill the form manually
          </span>
        </button>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-mncuj7"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
          data-test-id="import-button"
          data-testid="import-button"
          type="button"
        >
          <span>
            Import
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataImporter > renders with error without a message 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ant-row mb3 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-alert ant-alert-info ant-alert-no-icon css-dev-only-do-not-override-mncuj7"
          data-show="true"
          role="alert"
        >
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              Fill in the field to automatically import more data from arXiv or DOI
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row mb3 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-alert ant-alert-error css-dev-only-do-not-override-mncuj7"
          data-show="true"
          data-testid="data-importer-error"
          role="alert"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle ant-alert-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
              />
            </svg>
          </span>
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              Something went wrong during the import
            </div>
          </div>
          <button
            class="ant-alert-close-icon"
            tabindex="0"
            type="button"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-5 css-dev-only-do-not-override-mncuj7"
        >
          <label
            class=""
            title=""
          >
            <span
              aria-describedby="test-id"
            >
              From arXiv or DOI
            </span>
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                data-test-id="import-input"
                data-testid="import-input"
                placeholder="hep-th/9711200 or 1207.7235 or arXiv:1001.4538 or 10.1086/305772 or doi:10.1086/305772"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-space-between ant-row-middle css-dev-only-do-not-override-mncuj7"
      type="flex"
    >
      <div
        class="ant-col css-dev-only-do-not-override-mncuj7"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text __LinkLikeButton__ blue"
          data-test-id="skip-import-button"
          data-testid="skip-import-button"
          type="button"
        >
          <span>
            Skip and fill the form manually
          </span>
        </button>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-mncuj7"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
          data-test-id="import-button"
          data-testid="import-button"
          type="button"
        >
          <span>
            Import
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataImporter > renders without error while importing 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ant-row mb3 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-alert ant-alert-info ant-alert-no-icon css-dev-only-do-not-override-mncuj7"
          data-show="true"
          role="alert"
        >
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              Fill in the field to automatically import more data from arXiv or DOI
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
    >
      <div
        class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-5 css-dev-only-do-not-override-mncuj7"
        >
          <label
            class=""
            title=""
          >
            <span
              aria-describedby="test-id"
            >
              From arXiv or DOI
            </span>
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                data-test-id="import-input"
                data-testid="import-input"
                placeholder="hep-th/9711200 or 1207.7235 or arXiv:1001.4538 or 10.1086/305772 or doi:10.1086/305772"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-space-between ant-row-middle css-dev-only-do-not-override-mncuj7"
      type="flex"
    >
      <div
        class="ant-col css-dev-only-do-not-override-mncuj7"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text __LinkLikeButton__ blue"
          data-test-id="skip-import-button"
          data-testid="skip-import-button"
          type="button"
        >
          <span>
            Skip and fill the form manually
          </span>
        </button>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-mncuj7"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-loading"
          data-test-id="import-button"
          data-testid="import-button"
          type="button"
        >
          <span
            class="ant-btn-icon ant-btn-loading-icon"
          >
            <span
              aria-label="loading"
              class="anticon anticon-loading anticon-spin"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="loading"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                />
              </svg>
            </span>
          </span>
          <span>
            Import
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
